clang/test/BSC/Negative/OwnedStruct/destructor/invalid_destructor_call.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {    
   ~A(A this){
   }
   public:
   int x; 
};
owned struct B {    
   public:
   int x; 
   ~B(B this){}
};

int main() {
   A a = {3};
   a.~A(); // expected-error {{'~A' is a private member of 'struct A'}}
   B b = {3};
   B::~B(); // expected-error {{expected identifier}}
  return 0;
}